package activities

import (
	"canaanadvisors-test/proto/order"
	"context"
)

func CreateOrder(ctx context.Context, input *order.OrderCreateRequest) (*order.OrderCreateResponse, error) {
	return nil, nil
}

func CreateOrderCompensation(ctx context.Context, input *order.OrderCreateRequest) (*order.OrderCreateResponse, error) {
	return nil, nil
}
